fixed Back btn on mobile

--- a/app/scss/gallery-tamplate.scss
+++ b/app/scss/gallery-tamplate.scss
@@ -68,8 +68,8 @@
 #gallery-counter {
   width: auto;
   height: 32px;
-  margin-bottom: -30px;
-  margin-bottom: -30px;
+  // margin-bottom: -30px;
+  // margin-bottom: -30px;
   display: flex;
   justify-content : center;
 }
@@ -90,10 +90,6 @@
 @media(max-width: 1200px) {
   .gallery-container {
     width : 100%;
-  }
-  #gallery-counter {
-    display: block-inline;
-    float: right;
   }
 }
 
