--- a/app/scss/item-page__img.scss
+++ b/app/scss/item-page__img.scss
@@ -201,6 +201,10 @@ h2.price__content--free {
   #page-navigation {
     padding-left : 0;
   }
+
+  .back-btn {
+    display: none;
+  }
   .main-item {
     flex-direction: column;
     align-items: center;
@@ -219,7 +223,7 @@ h2.price__content--free {
     min-width : 0;
     width: 100%;
     height: auto;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     img {
       height: auto;
       width: 100%;
